# flowo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  Dockerfile.backend  INSTALL.md  LICENSE  README.md  alembic.ini  compose.dev.yml  compose.multiple.yml  compose.yml  docker-compose.dev.yml  docker-compose.jm.yml  docker-compose.local.yml  docker-compose.multiple.yml  docker-compose.release.yml  docker-compose.yml  docker-entrypoint.sh  env.example  mkdocs.yml  noxfile.py  package-lock.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  supervisord.conf
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.devcontainer/fastapi/: devcontainer.json
.gitea/workflows/: build-and-push.yml
.github/workflows/: build-and-push.yml  bump-version.yml  deploy-docs.yml  deploy-mock.yml  publish.yml  pypi-publish.yml  tests.yml
app/: __init__.py  main.py  manage.py
app/alembic/: env.py
app/alembic/versions/: 067b69763188_add_catalog_files_and_catalog_file_.py  3602ee30de87_remove_catalog_file_and_batch_import_.py  3c74a1a96910_add_user_name.py  46f7ce4fa652_add_smtp_to_system_settings.py  4fd23b2d16da_add_catalogs_table.py  87413392d668_add_require_email_verification_to_.py  8b3ac7e7b37c_add_code_and_language_to_rules.py  906f79ea5749_add_system_settings_and_invitation.py  a1b2c3d4e5f7_add_notification_settings.py  a1b2c3d4e5f8_add_catalog_dag_preview_columns.py  ab4bc3ac69db_add_batch_imports_table_and_batch_id_to_.py  b2c3d4e5f6a7_user_tokens_store_hmac_hash.py  ba4e3285cd2d_init.py  c1a2b3d4e5f6_add_user_settings.py  c3d4e5f6a7b8_db_backed_catalog_and_snake_template_files.py  c9d8e7f6a5b4_add_workflow_events_table.py  d1e2f3a4b5c6_add_catalog_workspace_columns.py  d5e6f7a8b9c0_add_catalog_blobs_table.py  e3f4a5b6c7d8_timestamptz_catalog_files_and_batch.py  e4f5a6b7c8d9_drop_workflow_events_workflow_fk.py  f1a2b3c4d5e6_add_user_role_for_demo_viewer.py  f8a1c2d3e4b5_catalog_slug_unique_per_owner.py
app/api/: __init__.py  deps.py
app/api/endpoints/: admin.py  auth.py  catalog.py  files.py  jobs.py  mcp.py  outputs.py  reports.py  settings.py  sse.py  summary.py  templates.py  tokens.py  utils.py  workflows.py
app/core/: config.py  permissions.py  pg_listener.py  session.py  users.py
app/models/: __init__.py  batch_import.py  catalog.py  catalog_blob.py  catalog_file.py  error.py  invitation.py  job.py  rule.py  snake_template.py  system_settings.py  user.py  user_settings.py  user_token.py  workflow.py  workflow_event.py
app/plugin/: __main__.py  schemas.py
app/plugin/client/: cli.py  log_handler.py  parsers.py  template_local.py
app/plugin/server/: constants.py  handlers.py  registry.py
app/schemas/: __init__.py  invitation.py  job.py  system_settings.py  user.py  user_token.py  util.py  workflow.py
app/services/: catalog_service.py  git_service.py  job.py  notification.py  summary.py  user_token.py  workflow.py  workflow_template.py
app/services/catalog/: __init__.py  access.py  archive.py  backfill.py  base.py  catalog_storage.py  crud.py  (+12 more)
app/utils/: paths.py  user_api_token_crypto.py
backend/: Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 97f0c01ed1fe_init.py  ba4e3285cd2d_init.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: files.py  jobs.py  logs.py  outputs.py  sse.py  summary.py  utils.py  workflows.py
backend/app/core/: config.py  pg_listener.py  session.py  sse_connection_manager.py
backend/app/models/: __init__.py  base.py  enums.py  error.py  file.py  job.py  rule.py  workflow.py
backend/app/schemas/: __init__.py  file.py  job.py  util.py  workflow.py
backend/app/services/: __init__.py  file_tree.py  job.py  search.py  summary.py  workflow.py
backend/app/utils/: paths.py
backend/scripts/: 01-triggers-functions.sql
docker/: compose.multiple.yml  compose.yml
docs/: advanced-configuration.md  architecture.md  faq.md  getting-started.md  index.md  mcp.md  quickstart.md
docs/advanced/: email-notifications.md  mcp.md
docs/architecture/: catalog-storage.md  data-flow.md  overview.md
docs/reference/: environment-variables.md
docs/user-manual/: catalog.md  dag-preview.md  dashboard.md  installation.md  jobs-logs-errors.md  login-cli.md  overview.md  results-preview.md  run-snakemake.md  workflow-detail.md
frontend/: .prettierignore  Dockerfile  README_API_CLIENT.md  eslint.config.js  index.html  nginx.conf  openapi-ts.config.js  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.app.json  vite.config.ts
frontend/public/: frappe-gantt.css
frontend/src/: auth.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
k8s/: README.md  backend.yaml  caddy.yaml  cleanup.sh  configmap-examples.yaml  configmap.yaml  deploy.sh  frontend.yaml  ingress.yaml  kustomization.yaml  migrations.yaml  namespace.yaml  postgresql.yaml  storage.yaml
logger_frontend/: README_API_CLIENT.md  openapi.json  package.json  vite.config.ts
logger_frontend/src/: index.css  main.tsx  routeTree.gen.ts
src/flowo_common/: __init__.py  config.py  paths.py  token_config.py
src/snakemake_logger_plugin_flowo/: __init__.py
tests/: conftest.py  inspect_rule_code.py
tests/api/: test_auth.py  test_catalog.py  test_catalog_dag_preview.py  test_cli_login_poll.py  test_demo_viewer_permissions.py  test_files_and_workflows.py  test_management.py  test_mcp_tools.py  test_reports.py  test_summary.py  test_workflows.py
tests/demos/: Snakefile
tests/plugin/: test_cli_catalog_list.py  test_cli_status.py
tests/snakemake_compat/: test_extract_rules_real_snakemake.py  test_log_handler_compat.py  test_logger_e2e_real_snakemake.py
tests/unit/: test_api_deps.py  test_catalog_utils.py  test_git_service.py  test_job_service.py  test_manage_bootstrap.py  test_notification_templates.py  test_parsers.py  test_paths.py  test_snake_template_ensure.py  test_snakemake_service.py  test_snakevision.py  test_summary_service.py  test_user_token.py  test_workflow_service.py
(+236 files in other folders)
