[project]
name = "flowo"
version = "0.1.0"
description = "A PostgreSQL-based logging plugin for Snakemake workflows that provides persistent storage and monitoring capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Haomiao Zhang", email = "zhanghm@iregene.com"},
    {name = "Jingmin Zhang", email = "zhangjm@iregene.com"}
]

dependencies = [
    "pydantic>=2.11.5",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.9.1",
    "asyncpg>=0.30.0",
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "anytree>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"
name = "pypi"
